# accelerometer-service

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cz.yaml
data/: accelerometer.yaml
src/: accelerometer.rs  lib.rs  mqtt.rs  utils.rs  value.rs
src/chips/: icm20948.rs  m845xq.rs  mod.rs
