[package]
name = "accelerometer"
version = "1.0.2"
edition = "2021"
description = "A library and service for interacting with 3-axis digital accelerometers such as MMA845x"
license = "GPL-3.0-or-later"
exclude = [ ".devcontainer", ".github", ".vscode", ".git*" ]
repository = "https://github.com/kerrys-learning-lab/accelerometer-service"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"

linux-embedded-hal = "0.3.2"
exitcode = "1.1.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
embedded-hal = "0.2.7"
strum = { version = "0.24.1", features = ["derive"] }
chrono = "0.4.23"
paho-mqtt = { version = "0.12.0", default-features = false, features = ["bundled"] }
serde_json = "1.0.91"
dialoguer = "0.10.3"
